fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -2,32 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-  
 :root {
-  --primary:#4d5d9e;
-  --secondary:#293264;
-  --hover:rgba(147, 196, 253, .8);
-  --active:rgba(20, 97, 198, .4);
-  --correct: rgba(74, 222, 128, .8);
-  --incorrect: rgba(252, 165, 165, .8);
-  --off:rgb(156 163 175);
-  --theme:white;
+  --primary: #4d5d9e;
+  --secondary: #293264;
+  --hover: rgba(147, 196, 253, 0.8);
+  --active: rgba(20, 97, 198, 0.4);
+  --correct: rgba(74, 222, 128, 0.8);
+  --incorrect: rgba(252, 165, 165, 0.8);
+  --off: rgb(156 163 175);
+  --theme: white;
 }
 
-.dark{
-  --primary:hsla(0, 0%, 0%, 0.9);
-  --secondary:rgb(9, 9, 44);
-  --active:rgba(147, 196, 253, .7);
-  --hover:rgba(20, 97, 198, .5);
+.dark {
+  --primary: hsla(0, 0%, 0%, 0.9);
+  --secondary: rgb(9, 9, 44);
+  --active: rgba(147, 196, 253, 0.7);
+  --hover: rgba(20, 97, 198, 0.5);
   --correct: rgba(74, 222, 128, 0.5);
   --incorrect: rgba(252, 165, 165, 0.5);
-  --off:rgb(88, 88, 88);
-  --theme:rgb(148, 154, 148);
+  --off: rgb(88, 88, 88);
+  --theme: rgb(148, 154, 148);
 }
-
-
 
 /* loading animation */
 
@@ -67,4 +62,21 @@
     top: 24px;
     height: 32px;
   }
+}
+
+/* loading animation end */
+
+@keyframes load-animation {
+  0% {
+    opacity: 0;
+    scale: 0;
+  }
+  100% {
+    opacity: 1;
+    scale: 1;
+  }
+}
+
+.load-anim {
+  animation: load-animation 0.4s 1 forwards;
 }
